--- a/04_DOM/one.html
+++ b/04_DOM/one.html
@@ -12,8 +12,18 @@
 </head>
 <body class="bg-black">
     <div>
-        <h1 id="title" class="heading">DOM learning on Chai aur code</h1>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <h1 id="title" class="heading">DOM learning on Chai aur code <span style="display:none"> test text</span></h1>
+        <h2 id="intro">Hi, My name is Ashish</h2>
+        <h2>What's the problem</h2>
+        <h2>Are you ok?</h2>
+        <h2>I think something is wrong</h2>
+        <p>Lorem ipsum dolor sit.</p>
+        <input type="password" name="" id="">
+        <ul>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+        </ul>
     </div>
 </body>
 </html>
